syntax = "proto3";
package auth;

import "common.proto";

service AuthService {
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse);
  rpc RefreshToken(RefreshTokenRequest) returns (RefreshTokenResponse);
  rpc Logout(LogoutRequest) returns (common.BaseResponse);
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  bool success = 1;
  int32 statusCode = 2;
  string message = 3;
  LoginData data = 4;
}

message LoginData {
  string token = 1;
  string refreshToken = 2;
  string permissionToken = 3;
  UserInfo user = 4;
}

message ValidateTokenRequest {
  string token = 1;
}

message ValidateTokenResponse {
  bool valid = 1;
  UserInfo user = 2;
}

message RefreshTokenRequest {
  string refresh_token = 1;
}

message RefreshTokenResponse {
  bool success = 1;
  string access_token = 2;
  string refresh_token = 3;
}

message LogoutRequest {
  string user_id = 1;
  string token = 2;
}

message UserInfo {
  string id = 1;
  string email = 2;
  string firstName = 3;
  string lastName = 4;
  string phoneNumber = 5;
  repeated string roles = 6;
}